--- a/03_Drawing_PlayGround/style.css
+++ b/03_Drawing_PlayGround/style.css
@@ -1,13 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f0f0f0;
-  }
-  
-  canvas {
-    border: 2px solid black;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* height: 100vh;
+  width: 100vw; */
+  margin: 0;
+  background-color: #f0f0f0;
+}
+
+.navbar {
+  display: flex;
+}
+
+canvas {
+  border: 2px solid black;
+}
